# generate-ai-stocks

./: .gitignore  .gitmodules  .prettierignore  README.ja.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: projects-sync.yml  sync-projects.yml
chat-app/: README.md  package.json  pnpm-lock.yaml
daily-report-cli/: ARCHITECTURE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  package.json  pnpm-lock.yaml
daily-report-cli/src/: index.ts
doc-scanner-unified/: package.json  pnpm-lock.yaml
email-auto-reply/: .gitignore  .npmrc  README.md  package-lock.json  package.json  pnpm-lock.yaml
gather-app/: .gitignore  pnpm-lock.yaml
gather-app/docs/: livekit-selfhost-oracle.md
github-leak-detector/: LICENSE  action.yml
github-leak-detector/docs/: DEVELOPMENT.md
github-leak-detector/examples/: usage.ts
github-leak-detector/src/: cli.ts  git-utils.ts  types.ts
nomikai/: pnpm-workspace.yaml
nomikai/android/: settings.gradle.kts
nomikai/ios/: project.yml  setup.sh
projects/PackingListApp/: README.md  project.yml
projects/ai-chat-auto-set-key/: README.md  package.json  pnpm-lock.yaml  project.yml
projects/app-studio/: project.yml
projects/ar-editor-preview/: project.yml
projects/ar-recorder/: README.md  project.yml
projects/ar-recorder-monorepo/: .gitignore
projects/ar-timecapsule/: .gitignore  README.md  package.json  project.yml
projects/attention-intervention-system/: gradlew  project.yml
projects/auto-product-video-generator/: .gitignore  README.md  package.json  pnpm-lock.yaml  project.yml
projects/background-speech-recognizer/android/app/src/main/jni/: CMakeLists.txt  whisper_jni.cpp
projects/chat-app/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml  project.yml
projects/clipboard-manager/: README.md  project.yml
projects/daily-report-cli/: .env.example  .gitignore  CONFIG_EXAMPLES.md  README.md  SETUP_CHECKLIST.md  SUMMARY_GUIDE.md  pnpm-lock.yaml  project.yml  test-summary.js  tsconfig.json
projects/devops-ai-agent/: .gitignore  Dockerfile.local-worker  Dockerfile.webhook  Dockerfile.worker  README.md  Taskfile.yml  docker-compose.local.yml  package.json  pnpm-lock.yaml  project.yml  tsconfig.root.json
projects/doc-scanner-unified/: .dockerignore  .gitignore  Dockerfile  README.md  project.yml
projects/email-auto-reply/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  project.yml  tsconfig.base.json
projects/fullstack-image-converter/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.yml  tsconfig.json
projects/fullstack-media-converter/: .gitignore  pnpm-lock.yaml
projects/gather-app/: README.md  package.json  pnpm-lock.yaml  project.yml
projects/github-leak-detector/: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  package.json  pnpm-lock.yaml  project.yml  setup.sh
projects/heart-linker-app/: README.md  project.yml
projects/nomikai/: .gitignore  README.md  package.json  project.yml  turbo.json
projects/noroshi-app/: .gitignore  README.md  package.json  pnpm-lock.yaml  project.yml  turbo.json
projects/offline-chat-app/: .gitignore  README.md  project.yml
projects/phone-load-balancer/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.yml
projects/plateau-sniper-vs-guardman/: README.md  package.json  pnpm-lock.yaml  project.yml
projects/recstudio/: .prettierignore  README.md  package.json  prettier.config.js  project.yml  wrangler.jsonc
projects/remove-light-shadow-camera-app/: project.yml  settings.gradle
projects/signalforge/: README.md  package.json  pnpm-lock.yaml  project.yml  signalforge.yml  tsconfig.json
projects/stamp-rally/: README.md  pnpm-lock.yaml  project.yml  turbo.json
projects/turnless-webrtc-sample/: data-channel.tsx  package.json  pnpm-lock.yaml  video-chat.tsx
projects/webpush-demo/: .gitignore  .prettierignore  FCM_SETUP.md  SETUP_GUIDE.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.json  wrangler.toml
recstudio/: .gitignore  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
recstudio/app/: layout.tsx  not-found.tsx  page.tsx  sitemap.ts
recstudio/components/: RecordingApp.tsx
recstudio/pages/: index.tsx
scripts/: cli.ts  generate-project-yml.ts  init-project.ts  push-submodules.ts  sync-portfolio.ts  sync-readme.ts  translate-projects.ts  update-submodules.ts  validate-projects.ts
stamp-rally/: .gitignore  package.json
templates/: README.ja.template.md  README.template.md  project.template.yml
(+903 files in other folders)
